--- a/lab1/verdex-setup.tex
+++ b/lab1/verdex-setup.tex
@@ -18,12 +18,12 @@
 \begin{document}
 	\maketitle
 
-	\section{Creating a bootable microSD card.}
+	\section*{Creating a bootable microSD card.}
 
    What you will need?  \\
 
    \begin{enumerate}
-   \item A development machine with some version of linux (I had Ubuntu 9.04
+   \item A development machine with some version of linux (I had Ubuntu 12.04
          installed on my machine) .  You should have root access on  this 
          machine (or at least the ability to \texttt{mount/unmount} devices and
          run \texttt{fdisk}).  
@@ -31,7 +31,7 @@
          converts microSD card into an SD card which you can use on your
          computer. If your computer/laptop does not have an SD card reader,
          please contact the course staff  to get a USB adapter for the microSD
-         card.   
+         card.
    \end{enumerate}
 
    The example covered in this document will show the steps for setting up 
@@ -39,62 +39,69 @@
 
    First insert your card into your development machine's flash card slot. \\
 
-   On my Ubuntu 9.04 machine, the newly inserted card shows up as
-   \texttt{/dev/sdb1} and that  is the device name that will be used through
-   this example. You should substitute the proper device name for your machine.
-   You can use '\texttt{mount}' or '\texttt{df}' to see where the card mounts
-   on your machine. 
+   On my Ubuntu 12.04 machine, the newly inserted card shows up as
+   \texttt{/dev/mmcblk0} (with any partitions showing up as
+   \texttt{/dev/mmcblk0p1}, \texttt{/dev/mmcblk0p2}, etc.) and that  is the
+   device name that will be used through this example. You should substitute
+   the proper device name for your machine.  You can use '\texttt{mount}' or
+   '\texttt{df}' to see where the card mounts on your machine. 
 
-   \subsection{Step 1}
-   Unmount the device's existing file system before we get started
-   with \texttt{fdisk} 
+   \subsection*{Step 1}
+   Unmount the device's existing file system (all possible partitions) before
+   we get started with \texttt{fdisk} 
 	\begin{verbatim} 
-	% svn add file1 file2 file3 
+	$ sudo umount /dev/mmcblk0*
 	\end{verbatim}
 
-   \section{Partitioning the card}
-   \subsection{Step 2}
+   \section*{Partitioning the card}
+   \subsection*{Step 2}
       Now launch \texttt{fdisk} and create an empty partition table. Note that
-      the argument for \texttt{fdisk} is the entire device \texttt{(/dev/sdb)}
-      not just a single partition \texttt{(i.e. /dev/sdb1):} 
+      the argument for \texttt{fdisk} is the entire device
+      \texttt{(/dev/mmcblk0)} not just a single partition \texttt{(i.e.
+      /dev/mmcblk0p1):} 
       \begin{verbatim}
-      # sudo fdisk /dev/sdb 
+      $ sudo fdisk /dev/mmcblk0
       Command (m for help): o 
-      Building a new DOS disk label. Changes will remain in memory only, until 
-      you decide to write them. After that, of course, the previous content 
-      won't be recoverable. 
+      Building a new DOS disklabel with disk identifier 0x29745232.
+      Changes will remain in memory only, until you decide to write them.
+      After that, of course, the previous content won't be recoverable.
+
       Warning: invalid flag 0x0000 of partition table 4 will be corrected by
-      w(rite) 
+      w(rite)
       \end{verbatim}
-   \subsection{Step 3}
+   \subsection*{Step 3}
       First look at the current card information: 
       \begin{verbatim}
       Command (m for help): p 
-      Disk /dev/sde: 2032 MB, 2032664576 bytes 
-      64 heads, 63 sectors/track, 984 cylinders 
-      Units = cylinders of 4032 * 512 = 2064384 bytes 
-      Disk identifier: 0x00aa8e5c 
-         Device Boot      Start         End      Blocks   Id  System
+
+      Disk /dev/mmcblk0: 1977 MB, 1977614336 bytes
+      4 heads, 16 sectors/track, 60352 cylinders, total 3862528 sectors
+      Units = sectors of 1 * 512 = 512 bytes
+      Sector size (logical/physical): 512 bytes / 512 bytes
+      I/O size (minimum/optimal): 512 bytes / 512 bytes
+      Disk identifier: 0x29745232
+
+        Device Boot      Start         End      Blocks   Id  System
       \end{verbatim}
-      Note the card size in bytes. We will needed it later in the process.
-   \subsection{Step 4}
+      Note the card size in bytes. We will need it later in the process.
+   \subsection*{Step 4}
       Now go into "Expert" mode: 
       \begin{verbatim}
       Command (m for help): x
       \end{verbatim}
-   \subsection{Step 5}
+   \subsection*{Step 5}
       Next we will set the geometry to 255 heads, 63 sectors and a calculated
       value for the number of cylinders required for the particular microSD
       card. \\
       
-      To calculate the number of cylinders, we take the 2032664576 (replace
+      To calculate the number of cylinders, we take the 1977614336 (replace
       this number by the number reported by your \texttt{fdisk} command)
       bytes reported above by \texttt{fdisk} divided by 255 heads, 63 sectors
       and 512 bytes per sector: \\
 
-      2032664576 / 255 / 63 / 512 = 247.12 which we round down to 247
+      1977614336 / 255 / 63 / 512 = 240.43 which we round down to 240
       cylinders.
-   \subsection{Step 6}
+   \subsection*{Step 6}
      Set the number of heads, sectors and cylinders
      \begin{verbatim}
      Expert command (m for help): h 
@@ -102,12 +109,11 @@
 
      Expert command (m for help): s 
      Number of sectors (1-63, default 62): 63 
-     Warning: setting sector offset for DOS compatiblity 
 
      Expert command (m for help): c 
      Number of cylinders (1-1048576, default 984): 247
     \end{verbatim}
-   \subsection{Step 7}
+   \subsection*{Step 7}
       Return to \texttt{fdisk's} main mode and create a new partition 
       \texttt{32 MB FAT} partition: 
       \begin{verbatim}
@@ -118,10 +124,10 @@
          p   primary partition (1-4) 
       p 
       Partition number (1-4): 1 
-      First cylinder (1-247, default 1): 1 
-      Last cylinder or +size or +sizeM or +sizeK (1-247, default 15): +32M
+      First sector (2048-3862527, default 2048): 2048
+      Last sector, +sectors or +size{K,M,G} (2048-3862527, default 3862527): +32M
       \end{verbatim}
-   \subsection{Step 8}
+   \subsection*{Step 8}
       Change the partition type to \texttt{FAT32}: 
       \begin{verbatim}
       Command (m for help): t 
@@ -136,7 +142,7 @@
       Command (m for help): a 
       Partition number (1-4): 1
       \end{verbatim}
-   \subsection{Step 9}
+   \subsection*{Step 9}
       Next we create an \texttt{ext3} partition for the rootfs. 
       \begin{verbatim}
       Command (m for help): n 
@@ -145,24 +151,26 @@
          p   primary partition (1-4) 
       p 
       Partition number (1-4): 2 
-      First cylinder (6-247, default 6): 6 
-      Last cylinder or +size or +sizeM or +sizeK (6-247, default 247): 247
+      First sector (67584-3862527, default 67584): 67584
+      Last sector, +sectors or +size{K,M,G} (67584-3862527, default 3862527): 3862527
       \end{verbatim}
-   \subsection{Step 10}
+   \subsection*{Step 10}
       To verify our work, lets print the partition info 
       \begin{verbatim}
       Command (m for help): p 
 
-      Disk /dev/sdb: 2032 MB, 2032664576 bytes 
-      255 heads, 63 sectors/track, 247 cylinders 
-      Units = cylinders of 16065 * 512 = 8225280 bytes 
-      Disk identifier: 0x00aa8e5c 
+      Disk /dev/mmcblk0: 1977 MB, 1977614336 bytes
+      255 heads, 63 sectors/track, 240 cylinders, total 3862528 sectors
+      Units = sectors of 1 * 512 = 512 bytes
+      Sector size (logical/physical): 512 bytes / 512 bytes
+      I/O size (minimum/optimal): 512 bytes / 512 bytes
+      Disk identifier: 0x29745232
 
-         Device Boot      Start         End      Blocks   Id  System 
-      /dev/sdb1   *           1           5       40131    c  W95 FAT32 (LBA) 
-      /dev/sdb2               6         247     1943865   83  Linux 
+              Device Boot      Start         End      Blocks   Id  System
+      /dev/mmcblk0p1   *        2048       67583       32768    c  W95 FAT32 (LBA)
+      /dev/mmcblk0p2           67584     3862527     1897472   83 Linux
       \end{verbatim}
-   \subsection{Step 11}
+   \subsection*{Step 11}
       Up to this point no changes have been made to the card itself, so our
       final step is to write the new partition table to the card and then exit.
       \begin{verbatim}
@@ -176,64 +184,72 @@
 
       Syncing disks.
       \end{verbatim}
-   \section{Formatting the new partitions}
-   \subsection{Step 12}
+   \section*{Formatting the new partitions}
+   \subsection*{Step 12}
       We format the first partition as a FAT file system (the -n parameter
       gives it a label of FAT, you can change or omit this if you like)
       \begin{verbatim}
-      #  sudo mkfs.vfat -F 32 /dev/sdb1 -n FAT 
-      mkfs.vfat 2.11 (12 Mar 2005) 
+      $ sudo mkfs.vfat -F 32 /dev/mmcblk01 -n FAT 
+      mkfs.vfat 2.11 (29 Oct 2011) 
+      WARNING: Not enough clusters for a 32 bit FAT!
       \end{verbatim}
-   \subsection{Step 13}
+   \subsection*{Step 13}
       We format the second partition as an \texttt{ext3} file system
       \begin{verbatim} 
-      $ sudo mkfs.ext3 /dev/sdb2 
-      mke2fs 1.40.8 (13-Mar-2008) 
-      Filesystem label= 
-      OS type: Linux Block size=4096 (log=2) 
-      Fragment size=4096 (log=2) 
-      121920 inodes, 485966 blocks 
-      24298 blocks (5.00%) reserved for the super user 
-      First data block=0 
-      Maximum filesystem blocks=499122176 
-      15 block groups 
-      32768 blocks per group, 32768 fragments per group 
-      8128 inodes per group 
-      Superblock backups stored on blocks:  
-      32768, 98304, 163840, 229376, 294912 
+      $ sudo mkfs.ext3 /dev/mmcblk02 
+      mke2fs 1.42 (29-Nov-2011)
+      Discarding device blocks: done                            
+      Filesystem label=
+      OS type: Linux
+      Block size=4096 (log=2)
+      Fragment size=4096 (log=2)
+      Stride=0 blocks, Stripe width=0 blocks
+      118800 inodes, 474368 blocks
+      23718 blocks (5.00%) reserved for the super user
+      First data block=0
+      Maximum filesystem blocks=486539264
+      15 block groups
+      32768 blocks per group, 32768 fragments per group
+      7920 inodes per group
+      Superblock backups stored on blocks: 
+              32768, 98304, 163840, 229376, 294912
 
-      Writing inode tables: done                             
-      Creating journal (8192 blocks): done 
-      Writing superblocks and filesystem accounting information: ^[done 
-
-      This filesystem will be automatically checked every 36 mounts or 
-      180 days, whichever comes first.  Use tune2fs -c or -i to override. 
+      Allocating group tables: done                            
+      Writing inode tables: done                            
+      Creating journal (8192 blocks): done
+      Writing superblocks and filesystem accounting information: done 
       \end{verbatim}
-   \section{Installing the boot files}
+   \section*{Installing the boot files}
       There are 2 files required on the first (FAT) partition to boot your
       Verdex-Pro
       \begin{enumerate}
       \item gumstix-factory.script
       \item uimage: the linux kernel
       \end{enumerate}
-   \subsection{Step 14}
-      Mount the FAT partition of your microSD card. This example will assume
-      that you have mounted it at \texttt{/media/card} 
+   \subsection*{Step 14}
+      Mount the FAT partition of your microSD card. To do this, you must create
+      an empty directory to mount it to (it can be removed afterward, if you
+      like). I used the \texttt{/media/card} directory by first issuing the
+      command:
       \begin{verbatim}
-      $ sudo mount /dev/sdb1 /media/card 
-      $ sudo cp gumstix-factory.script /media/card/gumstix-factory.script 
-      $ sudo cp umage /media/card/uimage 
+      $ sudo mkdir /media/card
+      \end{verbatim}
+      This example will assume that you have mounted it at \texttt{/media/card}
+      \begin{verbatim}
+      $ sudo mount /dev/mmcblk01 /media/card 
+      $ sudo cp gumstix-factory.script /media/card/
+      $ sudo cp uimage /media/card/
       $ sync; sync; sync; 
       \end{verbatim}
       The \texttt{sync} command will flush any of the buffered writes to the
       microSD card (the command may take a few seconds to execute). 
-   \subsection{Step 15}
+   \subsection*{Step 15}
       You can now unmount the FAT partition: 
       \begin{verbatim}
-      $ sudo umount /dev/sdb1 
+      $ sudo umount /dev/mmcblk01
       \end{verbatim}
       At this point you have a bootable FAT partition. 
-   \subsection{Step 16}
+   \subsection*{Step 16}
       The final step is to untar your desired rootfs onto the \texttt{ext3}
       partition that you created above. \\
 
@@ -243,36 +259,35 @@
 
       This example will assume that you have mounted it at \texttt{/media/card}
       \begin{verbatim}
-      $ sudo mount /dev/sdb2 /media/card 
+      $ sudo mount /dev/mmcblk02 /media/card 
       \end{verbatim}
       Now untar your desired rootfs: 
       \begin{verbatim}
-      $ cd /media/card 
-      $ sudo tar xvf /path/to/rootfs.tar.gz  
+      $ sudo tar -xvf /path/to/rootfs.tar.gz -C /media/card
       $ sync; sync; sync; 
       \end{verbatim}
 
       The \texttt{sync} command will flush any of the buffered writes to the
-      microSD card (the command may take a few seconds to execute).
-   \subsection{Step 17}
+      microSD card (the command may take a minute to execute).
+   \subsection*{Step 17}
       You can now unmount the \texttt{ext3} partition: 
       \begin{verbatim}
-      $ sudo umount /dev/sdb2 
+      $ sudo umount /dev/mmcblk02 
       \end{verbatim}
 
       Remove the card from the adapter and insert it in the verdex-pro’s card
-      slot. Apply power to the hardware board. If you see a message saying
-      that the system is booting from the microSD card, Congratulations!! If
-      not, you probably made an error somewhere. Try once again and if not
-      successful, contact your TA or me \url{rgandhi@ece.cmu.edu}. Once the system
-      boots up of the microSD card, login using “\texttt{root}” as userid and 
-      “\texttt{gumstix}” as password. Write a simple C program and see if gcc
-      works.  
+      slot. Initiate a serial connection with the board. Apply power to the
+      hardware board. If you see a message saying that the system is booting
+      from the microSD card, Congratulations!! If not, you probably made an
+      error somewhere. Try once again and if not successful, contact your TA or
+      me \url{priya@cs.cmu.edu}. Once the system boots up of the microSD
+      card, login using “\texttt{root}” as userid and “\texttt{gumstix}” as
+      password. Write a simple C program and see if gcc works.  
 
       References: 
       \begin{enumerate}
-      \item Gumstix developer’s site.
-            \url{http://www.gumstix.net/User-How-To-s/view/User-How-To-s/Bootingfrom-microSD/SD/MMC/110.html}
+      \item Gumstix developer’s site.\\
+        \url{http://gumstix.org/create-a-bootable-microsd-card/69-create-a-bootable-microsd-card-old.html}
       \end{enumerate}
 
 \end{document}
